struct Machine {
       1: string ipAddress = "NULL",
       2: i32 port,
}